<resources>
    <string name="app_name">Todo Notes</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="title">Title</string>
    <string name="add_notes">Add Notes</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="image_preview">Image preview</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="menu">menu</string>
    <string name="blogs">Blogs</string>
    <string name="todo_notes_app">Todo Notes App</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="onboarding">Onboarding</string>
    <string name="manage_your_todo_s_list">Manage your Todo\'s list</string>
    <string name="add_pictures_to_your_notes">Add pictures to your notes</string>
    <string name="get_updated_with_latest_blogs">Get updated with latest blogs</string>
    <string name="done">Done</string>
    <string name="get_updated_through_push_notifications">Get updated through push notifications</string>
    <string name="no_notes">No Notes</string>
    <string name="no_notes_yet_nadd_some_notes_by_clicking_on">No notes yet\nAdd some notes by clicking on \'+\'</string>
    <string name="add_image">Add Image</string>
</resources>
